--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,57 @@ body {
 
 .container {
     display:flex
-    
+
 }
 
 .contacts {
     display: flex;
-   
     flex-direction: column;
+ 
+    width: 25%;
+   
+
+    justify-content: space-evenly;
+  
+
     
 }
 .active {
     display: flex;
+  justify-content: space-evenly; 
+    align-items: center;
+
+    border-color: gray;
+    
+}
+
+.status {
+    text-align: left;
+}
+
+.inactive {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    
+}
+
+.user {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: left;
+  
    
+
+    
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+
+
     
 }
 
@@ -25,15 +64,24 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    
     
 }
 
+.principal img {
+    width: 16%;
+}
+
+.photo {
+    display: flex;
+}
 .photo img{
     width: 70px;
     height: 70px;
     border-radius: 50%;
+
+   
+
 }
 
-.user {
-    display: flex;
-}
